# pennylane-snowflurry

./: .gitignore  LICENSE  README.md  env_config.ini  environment.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: python-publish.yml
doc/: diagrame_interaction.puml  snowflake_tutorial.jl
pennylane_snowflurry/: __init__.py  _version.py  api_adapter.py  api_job.py  api_utility.py  custom_decomposition.py  custom_gates.py  custom_optimization.py  debug_utility.py  execution_config.py  graph_util.py  julia_setup.py  kmp.py  monarq_connectivity.py  monarq_data.py  monarq_device.py  optimization_utility.py  pennylane_converter.py  snowflurry_converter.py  snowflurry_device.py  test.py  test_circuits.py  test_device.py  test_qiskit.py  thunderhead_device.py  vf2.py  zx_dag.py
pennylane_snowflurry/measurements/: __init__.py  counts.py  expectation_value.py  measurement_process.py  measurement_strategy.py  probabilities.py  sample.py  state.py
pennylane_snowflurry/optimization_methods/: commute_and_merge.py
pennylane_snowflurry/transpiler/: base_decomposition.py  debug_utility.py  monarq_transpile.py  multi_gate_decomposition.py  native_decomposition.py  native_gate_decomposition.py  optimization.py  physical_optimization.py  physical_placement.py  placement.py  routing.py  simple_decomposition.py  swap_routing.py  virtual_optimization.py
pennylane_snowflurry/transpiler/optimization_methods/: commute_and_merge.py  equivalences.py  zx_dag.py
pennylane_snowflurry/utility/: debug_utility.py  graph_utility.py  optimization_utility.py
tests/: test_decomp.py  test_kmp.py  test_optimization.py  test_pennylaneConverter.py  test_pennylaneSubroutine.py  test_pennylaneTests.py  test_place_route.py  test_pyjulia-snowflurry.py  test_snowflurryQubitDevice.py
